Move a bunch of methods out of util-misc and into new util-properties module.
Add tests and fix a couple of bugs. Create new subclass of Properties.